разметка главной страницы

--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,10 +1,9 @@
 @font-face {
-  font-family: 'Autumn Sweater';
+  font-family: Raleway;
   src:
-    local('Autumn Sweater'),
-    local('Autumn-Sweater'),
-    url(./Autumn-Sweater.woff) format('woff'),
-    url(./Autumn-Sweater.woff2) format('woff2');
-  font-weight: normal;
+    local('Raleway'),
+    url(./Raleway-Variable.woff2) format('woff2 supports variations'),
+    url(./Raleway-Variable.woff2) format('woff2-variations');
+  font-weight: 600 700;
   font-display: swap;
 }
