--- a/src/styles/_extends.scss
+++ b/src/styles/_extends.scss
@@ -34,7 +34,7 @@
     justify-content: center;
     font-size: 0.75em;
     padding: 0.75em;
-    color: var(--text-color);
+    color: inherit;
 
     position: absolute;
     inset: 0;
