--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -11,10 +11,10 @@ html {
 body {
   min-inline-size: 320px;
   margin: 0;
-  font-family: var(--main-font-family, 'Open Sans', sans-serif);
+  font-family: var(--main-font-family, 'Raleway', sans-serif);
   font-size: 16px;
-  color: var(--text-color);
-  background-color: var(--bg-color, #f5f5f5);
+  color: var(--text-main-color);
+  background-color: var(--bg-main-color, #ffffff);
 }
 
 h1,
