--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,75 +7,37 @@
   --grey-300: #c5c8c6;
   --grey-200: #e3e4e3;
   --grey-100: #f5f5f5;
-  --white: #fff;
+  --white: #ffffff;
 
-  --skeleton-gradient: linear-gradient(
-    90deg,
-    var(--grey-300) 0%,
-    var(--grey-100) 50%,
-    var(--grey-300) 100%
-  );
-  --bg-color: var(--white);
-  --bg-low-color: var(--grey-100);
-  --bg-footer-color: var(--grey-200);
-  --bg-blur-color: rgb(255 255 255 / 0.8);
+  --bg-main-color: var(--white);
+  --bg-secondary-color: var(--grey-100);
+  --bg-accent-color: var(--grey-800);
 
   --main-color: #f43f5e;
   --main-color-opacity: 244, 63, 94;
 
-  --text-color: var(--grey-800);
-  --text-low-color: var(--grey-600);
-  --button-color: var(--grey-800);
-  --icon-button-color: var(--grey-400);
+  --accent-color: #84CC16;
+  --accent-color-opacity: 132, 204, 22;
 
-  --main-font-family: 'Open Sans', sans-serif;
-  --heading-font-family: 'Raleway', sans-serif;
+  --text-main-color: var(--grey-800);
+  --text-secondary-color: var(--grey-600);
 
-  --heading-font-xl: 1.25em;
-  --heading-font-lg: 1em;
-  --text-font-md: 0.875em;
-  --text-font-sm: 0.75em;
+  --main-font-family: 'Raleway', sans-serif;
 
-  --box-shadow-sm: 0 0 2px rgb(100 112 103 / 0.25);
-  --box-shadow-md: 0 0 4px rgb(100 112 103 / 0.25);
-  --box-shadow-selected: 0 0 0 4px rgba(var(--main-color-opacity), 0.5);
+  // typography
+  --display-md: 128px;
+  --display-sm: 80px;
+  --heading-md: 60px;
+  --heading-sm: 40px;
+  --heading-xs: 24px;
+  --text-sm: 16px;
+  --text-md: 20px;
+  --text-lx: 24px;
 
-  --border-radius-sm: 8px;
-  --border-radius-md: 14px;
-  --border-radius-lg: 24px;
-  --border-radius-xl: 36px;
-}
+  --box-shadow-md: 0 8px 16px rgb(100 112 103 / 0.05);
 
-:root.border-rounded-md {
-  --border-radius-sm: 4px;
-  --border-radius-md: 8px;
-  --border-radius-lg: 12px;
-  --border-radius-xl: 20px;
-}
-
-:root.border-rounded-sm {
-  --border-radius-sm: 2px;
-  --border-radius-md: 4px;
-  --border-radius-lg: 8px;
-  --border-radius-xl: 12px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --skeleton-gradient: linear-gradient(
-      90deg,
-      var(--grey-800) 0%,
-      var(--grey-700) 50%,
-      var(--grey-800) 100%
-    );
-    --bg-color: var(--grey-800);
-    --bg-low-color: var(--grey-700);
-    --bg-footer-color: var(--grey-600);
-    --bg-blur-color: rgb(47 60 51 / 0.8);
-
-    --text-color: var(--white);
-    --text-low-color: var(--grey-200);
-    --button-color: var(--main-color);
-    --icon-button-color: var(--grey-300);
-  }
+  --border-radius-sm: 24px;
+  --border-radius-md: 36px;
+  --border-radius-lg: 64px;
+  --border-radius-xl: 180px;
 }
