разработка лендинга продолжение

--- a/src/blocks/footer/_footer.scss
+++ b/src/blocks/footer/_footer.scss
@@ -4,7 +4,7 @@
   background-color: var(--bg-secondary-color);
 
   &__columns {
-    padding: var(--indent-xxl) var(--indent-xxxl);
+    padding: var(--indent-xxl) var(--indent-xxxxl);
     display: flex;
   }
 
