--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -2,7 +2,7 @@
   padding: 0.75em 1.5em;
 
   &__indent {
-    padding: var(--indent-xs) var(--indent-xxxl);
+    padding: var(--indent-xs) var(--indent-xxxxl);
     display: flex;
     align-items: center;
     gap: var(--indent-lg);
