--- a/src/blocks/section/_section.scss
+++ b/src/blocks/section/_section.scss
@@ -2,7 +2,7 @@
   padding: 0.75em 1.5em;
 
   &__indent {
-    padding: var(--indent-xxl) var(--indent-xxxl);
+    padding: var(--indent-xxl) var(--indent-xxxxl);
   }
 
   &__card {
@@ -47,6 +47,6 @@
   }
 
   &_no-indent {
-    padding: 0;
+    padding-inline: 0;
   }
 }
