--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -9,8 +9,9 @@ html {
 }
 
 body {
-  min-inline-size: 320px;
-  margin: 0;
+  min-inline-size: 360px;
+  // max-inline-size: 120em;
+  margin: 0 auto;
   font-family: var(--main-font-family, 'Raleway', sans-serif);
   font-size: 16px;
   color: var(--text-main-color);
