--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,7 @@
 @import '../blocks/statistics/statistics';
 @import '../blocks/how/how';
 @import '../blocks/hiw/hiw';
+@import '../blocks/step/step';
 // @import '../blocks/not-found/not-found';
 
 // Modals
@@ -33,5 +34,6 @@
 
 // Blocks
 @import '../blocks/card/card';
+@import '../blocks/banner-card/banner-card';
 @import '../blocks/splide/splide';
 // @import '../blocks/visually-hidden/visually-hidden';
