--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,8 @@
 
   --text-main-color: var(--grey-800);
   --text-secondary-color: var(--grey-600);
+  --text-accent-color: var(--white);
+  --text-accent-secondary-color: var(--grey-200);
 
   --main-font-family: 'Raleway', sans-serif;
 
