--- a/src/blocks/button/_button.scss
+++ b/src/blocks/button/_button.scss
@@ -5,8 +5,8 @@
   display: inline-flex;
   align-items: center;
   gap: 1rem;
-  min-block-size: 3.375rem;
-  padding: 1rem 2.375rem;
+  min-block-size: 2.8em;
+  padding: .8em 1.9em;
   text-align: center;
   border: 1px solid currentColor;
   outline: 4px solid transparent;
