--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -1,36 +1,114 @@
 .header {
-  padding: 0.75em 1.5em;
+  padding: 0.75em var(--indent-sm);
 
   &__indent {
-    padding: var(--indent-xs) var(--indent-xxxxl);
     display: flex;
     align-items: center;
     gap: var(--indent-lg);
+    padding: var(--indent-xs) var(--indent-xxxxl);
+
+    @include media(lg, max) {
+      display: grid;
+      grid-template-columns: auto 1fr auto;
+    }
+  }
+
+  &__burger {
+    @extend %reset-btn;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    inline-size: 3.125em;
+    block-size: 3.125em;
+    padding: 0;
+    transform: rotate(0deg);
+    transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+
+    @include media(lg) {
+      display: none;
+    }
+  }
+
+  &__burger-item {
+    inline-size: 1.125em;
+    block-size: 0.5em;
+  }
+
+  &__burger-item-bar {
+    width: 100%;
+    height: 2px;
+    display: block;
+    background: var(--text-main-color);
+    transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+
+    &:first-child {
+      transform: translateY(0px) rotate(0deg);
+    }
+    &:last-child {
+      transform: translateY(6px) rotate(0deg);
+    }
   }
 
   &__logo {
     flex: none;
     display: block;
-    inline-size: 167px;
-    block-size: 2.5em;
-    background-position: center;
-    background-size: contain;
-    background-image: url('../images/logo.svg');
+    inline-size: min(167px, 30vw);
+
+    @include media(lg, max) {
+      margin-inline-end: auto;
+    }
+  }
+
+  &__logo-image {
+    display: block;
+    inline-size: 100%;
   }
 
   &__menu {
     flex: auto;
+
     display: flex;
     gap: var(--indent-lg);
     align-items: center;
     justify-content: space-between;
+
+    @include media(lg, max) {
+      grid-column: 1/-1;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: var(--indent-xs) var(--indent-xxxxl);
+    }
   }
 
   &__list {
-    flex: auto;
     display: flex;
     gap: var(--indent-lg);
-    align-items: center;
+
+    @include media(lg, max) {
+      flex-direction: column;
+      padding-block-end: var(--indent-xxxxl);
+      border-block-end: 1px solid var(--text-secondary-color);
+    }
+  }
+
+  &__list-item {
+    @include media(lg, max) {
+      transform: scale(1.15) translateY(-30px);
+      opacity: 0;
+      transition:
+        transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99),
+        opacity 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+
+      @for $i from 1 through 7 {
+        &:nth-child(#{$i}) {
+          transition-delay: #{0.56 - ($i * 0.07)}s;
+        }
+      }
+    }
   }
 
   &__link {
@@ -60,6 +138,22 @@
     align-items: center;
   }
 
+  &__social-list-item {
+    @include media(lg, max) {
+      transform: scale(1.15) translateY(-15px);
+      opacity: 0;
+      transition:
+        transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99),
+        opacity 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+
+      @for $i from 1 through 7 {
+        &:nth-child(#{$i}) {
+          transition-delay: #{0.56 - ($i * 0.07)}s;
+        }
+      }
+    }
+  }
+
   &__social-link {
     color: var(--text-secondary-color);
     transition: color 0.3s;
@@ -85,10 +179,72 @@
     transition: transform 0.25s ease-in;
   }
 
-  &__burger {
-    display: none;
+  &__login-button {
+    @include media(lg, max) {
+      grid-area: 1/3/2/4;
+    }
   }
 
-  &__burger-item {
+  @include media(lg, max) {
+    padding: 0;
+    position: absolute;
+    inset: 0 0 auto 0;
+
+    background-image: linear-gradient(
+      to bottom,
+      var(--bg-main-color) 0% 4.875em,
+      var(--bg-secondary-color) 4.875em 100%
+    );
+    background-size: 0;
+
+    overflow: hidden;
+    block-size: 4.875em;
+    transition:
+      all 0.3s ease-in,
+      background-color 0.5s ease-in;
+
+    &_menu-opened {
+      block-size: 100%;
+      background-color: var(--bg-main-color);
+      background-size: 100%;
+
+      transition-delay: 0.25s;
+
+      .header__list-item {
+        transform: scale(1) translateY(0px);
+        opacity: 1;
+        transition:
+          transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99),
+          opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+        @for $i from 1 through 7 {
+          &:nth-child(#{$i}) {
+            transition-delay: #{0.07 * $i + 0.2}s;
+          }
+        }
+      }
+
+      .header__social-list-item {
+        transform: scale(1) translateY(0px);
+        opacity: 1;
+      }
+
+      .header__burger {
+        transform: rotate(90deg);
+      }
+
+      .header__burger-item {
+        transition: all 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+        transition-delay: 0.2s;
+      }
+
+      .header__burger-item-bar {
+        &:first-child {
+          transform: translateY(4px) rotate(45deg);
+        }
+        &:last-child {
+          transform: translateY(2px) rotate(-45deg);
+        }
+      }
+    }
   }
 }
