--- a/src/blocks/page/_page.scss
+++ b/src/blocks/page/_page.scss
@@ -16,4 +16,8 @@
     background-position-y: top;
     background-size: 75%;
   }
+
+  @include media(lg, max) {
+    padding-block-start: var(--header-block-size);
+  }
 }
