--- a/src/blocks/splide/_splide.scss
+++ b/src/blocks/splide/_splide.scss
@@ -34,7 +34,7 @@
   &_transparent-arrows {
     .splide__arrow {
       block-size: 100%;
-      width: var(--indent-xxxxl);
+      width: var(--indent-main-wide);
       border-radius: 0;
       background-color: transparent;
       opacity: 1;
