--- a/src/blocks/section/_section.scss
+++ b/src/blocks/section/_section.scss
@@ -2,7 +2,7 @@
   padding: 0.75em 1.5em;
 
   &__indent {
-    padding: var(--indent-xxl) var(--indent-main-wide);
+    padding: var(--indent-hor-card) var(--indent-main-wide);
   }
 
   &__card {
