--- a/src/blocks/page/_page.scss
+++ b/src/blocks/page/_page.scss
@@ -15,6 +15,15 @@
     background-position-x: 210%;
     background-position-y: top;
     background-size: 75%;
+
+    @include media(md, max) {
+      background-image: none;
+    }
+
+    @include media(lg, max) {
+      background-position-x: -50%;
+      background-size: 150%;
+    }
   }
 
   @include media(lg, max) {
