--- a/src/blocks/statistics/_statistics.scss
+++ b/src/blocks/statistics/_statistics.scss
@@ -1,5 +1,7 @@
 .statistics {
-  margin-block-start: -196px;
+  margin-block-start: calc(
+    clamp(4rem, -4.8571rem + 13.8393vw, 11.75rem) * -1
+  ); // 188
   position: relative;
 
   &__list {
@@ -8,10 +10,27 @@
     justify-content: space-between;
     gap: var(--indent-md) var(--indent-lg);
     flex-wrap: wrap;
+
+    @include media(md, max) {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    @include media(lg, max) {
+      justify-content: center;
+    }
   }
 
   &__item {
-    flex-basis: 400px;
+    flex-basis: min(25em, 100%); // 400
+
+    @include media(md, max) {
+      max-inline-size: min(17em, 100%);
+    }
+
+    @include media(lg, max) {
+      flex-basis: min(17em, 100%);
+    }
   }
 
   &__title {
@@ -22,9 +41,13 @@
 
   &__title-span {
     display: block;
+
+    @include media(md, max) {
+      text-align: center;
+    }
   }
 
   &__title-strong {
-    font-size: 64px;
+    font-size: clamp(2.5rem, 0.7857rem + 2.6786vw, 4rem); // 64
   }
 }
