--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -70,8 +70,8 @@
     @include media(lg, max) {
       grid-column: 1/-1;
       flex-direction: column;
-      align-items: flex-start;
-      // padding: var(--indent-xs) var(--indent-main-wide);
+      place-self: start;
+      padding: var(--indent-xs) var(--indent-main-wide);
     }
   }
 
@@ -81,7 +81,7 @@
 
     @include media(lg, max) {
       flex-direction: column;
-      // padding-block-end: var(--indent-main-wide);
+      padding-block-end: var(--indent-main-wide);
       border-block-end: 1px solid var(--text-secondary-color);
     }
   }
@@ -90,6 +90,8 @@
     @include media(lg, max) {
       transform: scale(1.15) translateY(-30px);
       opacity: 0;
+      pointer-events: none;
+      user-select: none;
       transition:
         transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99),
         opacity 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
@@ -179,7 +181,9 @@
   @include media(lg, max) {
     display: grid;
     grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto 1fr;
     position: absolute;
+    z-index: 1;
     inset: 0 0 auto 0;
 
     background-color: var(--bg-main-color);
@@ -197,6 +201,7 @@
       background-color 0.5s ease-in;
 
     &_menu-opened {
+      position: fixed;
       block-size: 100%;
       // background-color: var(--bg-main-color);
       background-size: 100%;
@@ -206,6 +211,8 @@
       .header__list-item {
         transform: scale(1) translateY(0px);
         opacity: 1;
+        pointer-events: unset;
+        user-select: unset;
         transition:
           transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99),
           opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
