--- a/src/blocks/section/_section.scss
+++ b/src/blocks/section/_section.scss
@@ -2,7 +2,7 @@
   padding: 0.75em 1.5em;
 
   &__indent {
-    padding: var(--indent-hor-card) var(--indent-main-wide);
+    padding: var(--indent-main-horizontal) var(--indent-main-wide);
   }
 
   &__card {
@@ -16,7 +16,6 @@
     &_bg_main-color {
       background-color: var(--main-color);
       color: var(--text-accent-color);
-
     }
   }
 
@@ -24,7 +23,7 @@
     font-weight: 700;
     font-size: var(--heading-md);
     text-align: center;
-    margin-block-end: var(--indent-md);
+    margin-block-end: var(--indent-xl);
 
     &_section-indent {
       @extend .section__indent;
@@ -38,13 +37,21 @@
   &__two-columns {
     display: grid;
     gap: var(--indent-xxs);
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(min(17em, 100%), 1fr));
+
+    @include media(lg) {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   &__three-columns {
     display: grid;
     gap: var(--indent-xl) var(--indent-xxl);
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(min(17em, 100%), 1fr));
+
+    @include media(lg) {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 
   &_no-indent {
